Changes: Fixed (maybe) viewport on mobile, added auto scroll

--- a/css/home.css
+++ b/css/home.css
@@ -87,15 +87,3 @@ img {
     padding: 30px;
     border-radius: 23px;
 }
-
-@media (max-width: 600px) {
-    .background-hover {
-        zoom: 50%;
-    }
-}
-
-@media (max-width: 900px) {
-    .background-hover {
-        zoom: 90%;
-    }
-}
